# RC_Assignment

./: README.md
edr_test/: Cargo.toml
edr_test/src/: edr_test.yml  main.rs
learningScripts/: args  helloWorld  helloWorld.rs
learningScripts/argsTest/: args  args.rs  clapTest.rs
learningScripts/clap_test/: Cargo.toml
learningScripts/clap_test/src/: clap_test.yml  main.rs
learningScripts/first_test/: Cargo.toml
learningScripts/first_test/src/: first_test.yml  main.rs
learningScripts/guessing_game/: Cargo.toml
learningScripts/hello_cargo/: Cargo.toml
