[package]
name = "edr_test"
version = "0.1.0"
authors = ["RexSteele <rexralphsteele@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
shell-words = "1.0.0"
users = "0.11"
